# madara-prover-api

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: tests.yml
integration-tests/: Cargo.toml
integration-tests/evm-test/: Cargo.toml
integration-tests/evm-test/src/: lib.rs  main.rs
integration-tests/tests/: test_integration.rs
integration-tests/tests/integration/: mod.rs  test_prover.rs  test_starknet_prover.rs  toolkit.rs
madara-prover-common/: Cargo.toml
madara-prover-common/src/: lib.rs  models.rs  toolkit.rs
madara-prover-rpc-client/: Cargo.toml  build.rs
madara-prover-rpc-client/src/: client.rs  lib.rs  main.rs  prover.rs
madara-prover-rpc-client/src/services/: mod.rs  prover.rs  starknet_prover.rs
madara-prover-rpc-server/: Cargo.toml  build.rs
madara-prover-rpc-server/src/: cairo.rs  error.rs  evm_adapter.rs  hints.rs  lib.rs  main.rs
madara-prover-rpc-server/src/services/: common.rs  mod.rs  prover.rs  starknet_prover.rs
madara-prover-rpc-server/tests/: test_run_bootloader.rs
protocols/: prover.proto  starknet_prover.proto
stone-prover/: Cargo.toml  build.rs
stone-prover/src/: error.rs  fri.rs  lib.rs  models.rs  prover.rs  toolkit.rs
stone-prover/tests/fixtures/fibonacci-no-hint/: fibonacci_compiled.json
stone-prover/tests/fixtures/hello-world/: hello_world.cairo  hello_world_compiled.json
test-cases/: Cargo.toml  README.md  generate_test_case.py  requirements.txt
test-cases/cases/bootloader/: bootloader_compiled.json
test-cases/cases/bootloader/empty_bootloader_proof/: annotations.txt  extra_annotations.txt
test-cases/cases/bootloader/pies/fibonacci-stone-e2e/output/: air_private_input.json  proof.json
test-cases/cases/bootloader/pies/fibonacci/output/: air_private_input.json  air_public_input.json
test-cases/cases/bootloader/programs/fibonacci/: cpu_air_params.json  generate_proof.sh  program.json
test-cases/cases/bootloader/programs/fibonacci/output/: air_private_input.json  air_public_input.json  proof.json
test-cases/cases/fibonacci/: cpu_air_params.json  fibonacci_compiled.json  fibonacci_private_input.json  fibonacci_proof.json  fibonacci_public_input.json
test-cases/cases/starknet-os/: cpu_air_params.json  cpu_air_prover_config.json  generate_proof.sh
test-cases/cases/starknet-os/output/: air_private_input.json  air_public_input.json  proof.json
test-cases/src/: lib.rs
test-fixtures/: Cargo.toml  build.rs
test-fixtures/src/: lib.rs
test-toolkit/: Cargo.toml
test-toolkit/src/: lib.rs
