[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
rand = "0.8.5"
madara-prover-common = { path = "../madara-prover-common" }
madara-prover-rpc-client = { path = "../madara-prover-rpc-client" }
madara-prover-rpc-server = { path = "../madara-prover-rpc-server" }
evm-adapter = { path = "../integration-tests/evm-test" }
rstest = { workspace = true }
serde_json = { workspace = true }
test-cases = { path = "../test-cases" }
test-fixtures = { path = "../test-fixtures" }
tokio = { workspace = true }
tonic = { workspace = true }
tower = "0.4.13"
