[package]
name = "madara-prover-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
stark_evm_adapter = { workspace = true }
tempfile = { workspase = true }

[dev-dependencies]
rstest = { workspace = true }
test-cases = { path = "../test-cases" }