[package]
name = "madara-prover-rpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
stone-prover-sdk = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }