[package]
name = "madara-prover-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
stone-prover = { path = "../stone-prover" }
tokio = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
test-toolkit = { path = "../test-toolkit" }

