[package]
name = "madara-prover-rpc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "madara-prover-rpc-server_bin"
path = "src/main.rs"

[lib]
name = "madara_prover_rpc_server"
path = "src/lib.rs"

[dependencies]
cairo-vm = { version = "0.9.0", features = ["lambdaworks-felt"] }
madara-prover-common = { path = "../madara-prover-common" }
prost = { workspace = true }
stone-prover = { path = "../stone-prover" }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { version = "0.1.14", features = ["net"] }
bincode = "2.0.0-rc.3"
serde = { version = "1.0.193", features = ["derive"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
test-cases = { path = "../test-cases" }

