[package]
name = "stone-prover"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper around StarkWare's Stone Prover."

[dependencies]
cairo-vm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3.8.1"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
test-cases = { path = "../test-cases" }