[package]
name = "stone-prover"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper around StarkWare's Stone Prover."

[dependencies]
cairo-vm = { workspace = true }
madara-prover-common = { path = "../madara-prover-common" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
test-cases = { path = "../test-cases" }
test-fixtures = { path = "../test-fixtures" }
