[package]
name = "test-fixtures"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { workspace = true }
madara-prover-common = { path = "../madara-prover-common" }
rstest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-cases = { path = "../test-cases" }
